[tool.poetry]
name = "currency-converter"
version = "0.1.0"
description = ""
authors = ["danalmeidap <dbatistadealmeida23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}
aiohttp = "^3.8.5"
dynaconf = "^3.2.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
